--- a/app/index.html
+++ b/app/index.html
@@ -5,4 +5,4 @@ engine: ejs
 current: index
 ---
 
-<p class="text-3xl font-bold underline">This is a demo.</p>
+<h1 class="bg-white flex justify-center items-center h-screen text-4xl font-bold">內容明天再做</h1>
