--- a/app/index.html
+++ b/app/index.html
@@ -5,4 +5,4 @@ engine: ejs
 current: index
 ---
 
-<h1 class="bg-white flex justify-center items-center h-screen text-4xl font-bold">內容明天再做</h1>
+<h1 class="bg-white flex justify-center items-center h-screen text-4xl font-bold">可怕的圖片內容明天再做</h1>
