--- a/app/index.html
+++ b/app/index.html
@@ -5,4 +5,91 @@ engine: ejs
 current: index
 ---
 
-<h1 class="bg-white flex justify-center items-center h-screen text-4xl font-bold">可怕的圖片內容明天再做</h1>
+<main>
+  <section class="recommend">
+
+      <ul>
+        <!-- 01 -->
+        <li class="bg-white border-t border-b w-full ">
+          <div class="container lg:flex">
+            <div
+            class="hidden lg:flex justify-center items-center bg-black text-white writing_lr px-6 pt-6 pb-[137px]"
+          >
+            <p class="squada mb-4 text-5xl leading-[1.0416]">Recommend</p>
+            <p class="text-xl leading-[1.3]">推 薦 系 列</p>
+          </div>
+            <div class="-mx-3">
+              <img
+                class=""
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art01.jpg"
+                alt="瞳孔:流動的脈絡"
+              />
+              <div class="container py-8">
+                <p class="squada text-lg leading-[0.94736] mb-2">Kemus Wu</p>
+                <h2 class="text-2xl leading-[1.4583] font-bold mb-6">瞳孔:流動的脈絡</h2>
+                <p class="mb-6">
+                  眼睛，總是吸引著我們的注意力，看、被看，也許眼睛裡有著從另一個世界看我們的世界。
+                </p>
+                <!-- 按鈕整組 -->
+                <div class="relative group">
+                  <a href="#" class="btn btn-white">MORE</a>
+                  <div class="triangle"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <!-- 02 -->
+        <li class="bg-white border-t border-b w-full">
+          <div class="container">
+            <div class="-mx-3">
+              <img
+                class=""
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art02.jpg"
+                alt="海洋波度"
+              />
+              <div class="container py-8">
+                <p class="squada text-lg leading-[0.94736] mb-2">Joanne</p>
+                <h2 class="text-2xl leading-[1.4583] font-bold mb-6">海洋波度</h2>
+                <p class="mb-6">
+                  海洋的奧秘向我們揭示了深不可測的一面，它的深度——反映了我們的恐懼、同時也吸引著我們。
+                </p>
+                <!-- 按鈕整組 -->
+                <div class="relative">
+                  <a href="#" class="btn btn-white">MORE</a>
+                  <div class="triangle"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <!-- 03 -->
+        <li class="bg-white border-t border-b w-full">
+          <div class="container">
+            <div class="-mx-3">
+              <img
+                class=""
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art21.jpg"
+                alt="我家窗前的鳥"
+              />
+              <div class="container py-8">
+                <p class="squada text-lg leading-[0.94736] mb-2">Michael</p>
+                <h2 class="text-2xl leading-[1.4583] font-bold mb-6">瞳孔:流動的脈絡</h2>
+                <p class="mb-6">
+                  家門前每天都有不同的小鳥，大多數的小鳥都有特殊能力，特殊能力是什麼我就不說了，希望大家能從作品感受到小鳥的快樂。å<!-- ¸´¸◊Dws -->
+                </p>
+                <!-- 按鈕整組 -->
+                <div class="relative">
+                  <a href="#" class="btn btn-white">MORE</a>
+                  <div class="triangle"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+</main>
