--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@ current: index
 <main>
   <section class="recommend lg:mt-10">
       <ul class="">
-        <div class="lg:container lg:flex lg:flex-wrap">
+        <div class="lg:container lg:flex lg:flex-wrap items-stretch">
 <!-- 01 -->
 <li class=" lg:w-full">
   <div class="">
@@ -23,14 +23,16 @@ current: index
     <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art01.jpg" alt="瞳孔:流動的脈絡" class="w-full lg:w-7/12">
 
     <!-- 文字區域 -->
-    <div class=" bg-white px-3 py-8">
-      <p class="squada text-lg mb-2">Kemus Wu</p>
-      <h3 class="text-2xl leading-[1.45833] font-bold mb-6 lg:text-4xl xl:text-5xl xl:leading-[1.45833]">瞳孔:流動的脈絡</h3>
-      <p class="mb-6">眼睛，總是吸引著我們的注意力，看、被看，也許眼睛裡有著從另一個世界看我們的世界。</p>
+    <div class=" bg-white px-3 py-8 lg:px-6 lg:pt-20 lg:pb-6 lg:flex lg:flex-col lg:justify-between">
+      <div class="">
+        <p class="squada text-lg mb-2">Kemus Wu</p>
+        <h3 class="text-2xl leading-[1.45833] font-bold mb-6 lg:text-4xl xl:text-5xl xl:leading-[1.45833]">瞳孔:流動的脈絡</h3>
+        <p class="mb-6">眼睛，總是吸引著我們的注意力，看、被看，也許眼睛裡有著從另一個世界看我們的世界。</p>
+      </div>
 
     <!-- 按鈕 -->
       <div class="relative group">
-        <div class="triangle lg:group-hover:border-black"></div>
+        <div class="triangle lg:group-hover:border-black lg:bottom-1"></div>
         <a href="#" class="mb-1 btn btn-white transition duration-300 lg:group-hover:bg-primary lg:group-hover:text-white">MORE</a>
       </div>
     </div>
@@ -39,49 +41,49 @@ current: index
 </li>
 
 <!-- 02 -->
-<li class=" lg:w-1/2">
-  <div class="">
-    <div class="border-t border-b lg:flex lg:border">
+<li class="w-full lg:w-1/2 h-auto">
+    <div class="border-t border-b lg:flex lg:border lg:flex-row-reverse">
     <!-- 圖片區域 -->
-    <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art01.jpg" alt="瞳孔:流動的脈絡" class="">
+    <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art02.jpg" alt="海洋波度" class="w-full lg:w-1/2 lg:h-[340px]">
 
     <!-- 文字區域 -->
-    <div class=" bg-white px-3 py-8 lg:w3/12">
-      <p class="squada text-lg mb-2">Kemus Wu</p>
-      <h3 class="text-2xl leading-[1.45833] font-bold mb-6 lg:text-[32px] xl:text-5xl xl:leading-[1.45833]">瞳孔:流動的脈絡</h3>
-      <p class="mb-6">眼睛，總是吸引著我們的注意力，看、被看，也許眼睛裡有著從另一個世界看我們的世界。</p>
+    <div class=" bg-white px-3 py-8 lg:pt-8 lg:pb-6 lg:px-6 lg:flex lg:flex-col lg:justify-between lg:w-1/2">
+      <div class="">
+        <p class="squada text-lg mb-2">Joanne</p>
+        <h3 class="text-2xl leading-[1.45833] font-bold mb-6 lg:text-[32px] lg:leading-[1.4375] ">海洋波度</h3>
+        <p class="mb-6">海洋的奧秘向我們揭示了深不可測的一面，它的深度——反映了我們的恐懼、同時也吸引著我們。</p>
+      </div>
 
     <!-- 按鈕 -->
       <div class="relative group">
-        <div class="triangle lg:group-hover:border-black"></div>
+        <div class="triangle lg:group-hover:border-black lg:bottom-1"></div>
         <a href="#" class="mb-1 btn btn-white transition duration-300 lg:group-hover:bg-primary lg:group-hover:text-white">MORE</a>
       </div>
     </div>
     </div>
-  </div>
 </li>
 
 <!-- 03 -->
-<li class=" lg:w-1/2">
-  <div class="">
-    <div class="border-t border-b lg:flex lg:border">
+<li class="w-full lg:w-1/2 h-auto">
+    <div class="border-t border-b lg:flex lg:border lg:flex-row-reverse">
     <!-- 圖片區域 -->
-    <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art01.jpg" alt="瞳孔:流動的脈絡" class="">
+    <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art21.jpg" alt="我家窗前的鳥" class="w-full lg:w-1/2 lg:h-[340px]">
 
     <!-- 文字區域 -->
-    <div class=" bg-white px-3 py-8">
-      <p class="squada text-lg mb-2">Kemus Wu</p>
-      <h3 class="text-2xl leading-[1.45833] font-bold mb-6 lg:text-[32px] xl:text-5xl xl:leading-[1.45833]">瞳孔:流動的脈絡</h3>
-      <p class="mb-6">眼睛，總是吸引著我們的注意力，看、被看，也許眼睛裡有著從另一個世界看我們的世界。</p>
+    <div class=" bg-white px-3 py-8 lg:pt-8 lg:pb-6 lg:px-6 lg:flex lg:flex-col lg:justify-between lg:w-1/2">
+      <div class="">
+        <p class="squada text-lg mb-2">Michael</p>
+        <h3 class="text-2xl leading-[1.45833] font-bold mb-6 lg:text-[32px] lg:leading-[1.4375]">我家窗前的鳥</h3>
+        <p class="mb-6">家門前每天都有不同的小鳥，大多數的小鳥都有特殊能力，特殊能力是什麼我就不說了，希望大家能從作品感受到小鳥的快樂。</p>
+      </div>
 
     <!-- 按鈕 -->
       <div class="relative group">
-        <div class="triangle lg:group-hover:border-black"></div>
+        <div class="triangle lg:group-hover:border-black lg:bottom-1"></div>
         <a href="#" class="mb-1 btn btn-white transition duration-300 lg:group-hover:bg-primary lg:group-hover:text-white">MORE</a>
       </div>
     </div>
     </div>
-  </div>
 </li>
         </div>
       </ul>
