--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@ current: index
 <!-- 01 -->
 <li class=" lg:w-full">
   <div class="">
-    <div class="border-t border-b lg:flex lg:border">
+    <div class="border-t-2 border-b ring-black lg:flex lg:border-0 lg:ring-1 lg:ring-black">
       <!-- 標題區域 -->
     <div class="hidden bg-black text-white writing_lr px-6 pt-24 pb-[137px] justify-center items-center lg:flex">
       <h2 class="squada text-5xl leading-[1.04166] mb-4">Recommend</h2>
@@ -20,7 +20,7 @@ current: index
     </div>
 
     <!-- 圖片區域 -->
-    <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art01.jpg" alt="瞳孔:流動的脈絡" class="w-full lg:w-7/12">
+    <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art01.jpg" alt="瞳孔:流動的脈絡" class="w-full lg:w-7/12 object-cover object-center">
 
     <!-- 文字區域 -->
     <div class=" bg-white px-3 py-8 lg:px-6 lg:pt-20 lg:pb-6 lg:flex lg:flex-col lg:justify-between">
@@ -42,7 +42,7 @@ current: index
 
 <!-- 02 -->
 <li class="w-full lg:w-1/2 h-auto">
-    <div class="border-t border-b lg:flex lg:border lg:flex-row-reverse">
+    <div class="border-t border-b ring-black lg:flex lg:border-0 lg:ring-1 lg:ring-black lg:flex-row-reverse">
     <!-- 圖片區域 -->
     <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art02.jpg" alt="海洋波度" class="w-full lg:w-1/2 lg:h-[340px]">
 
@@ -65,7 +65,7 @@ current: index
 
 <!-- 03 -->
 <li class="w-full lg:w-1/2 h-auto">
-    <div class="border-t border-b lg:flex lg:border lg:flex-row-reverse">
+    <div class="border-t border-b-2 ring-black lg:flex lg:border-0 lg:ring-1 lg:flex-row-reverse">
     <!-- 圖片區域 -->
     <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art21.jpg" alt="我家窗前的鳥" class="w-full lg:w-1/2 lg:h-[340px]">
 
@@ -88,6 +88,7 @@ current: index
         </div>
       </ul>
   </section>
+
   <section class="ranking mt-10">
     <div class="container">
       <div class="flex justify-between border-b mb-6">
@@ -98,20 +99,31 @@ current: index
           <a href="#" class="btn btn-no-border mt-2 transition duration-300 lg:group-hover:bg-primary lg:group-hover:text-white ">MORE</a>
         </div>
       </div>
-      <ul>
+      <ul class="lg:flex lg:flex-wrap lg:-mx-3">
         <!-- 01 -->
-        <li class="mb-4">
-          <div class="bg-white flex">
-            <p class="paytone border px-2 py-6 text-2xl flex justify-center items-center">1</p>
-            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art04.jpg" alt="散步遇到的女人" class="border w-[87px]">
-            <div class="w-full flex flex-col items-stretch">
-              <div class="py-4 px-2 border">
-                <p class="text-lg leading-[1.44444] font-bold">散步遇到的女人</p>
+        <li class="mb-4 lg:w-4/12 lg:px-3">
+          <div class="bg-white flex  lg:flex-col lg:relative group">
+            <!-- 按鈕 -->
+            <div class="absolute bottom-[117px] right-[1px] hidden group-hover:block ">
+              <div class="relative group ">
+                <div class="triangle lg:group-hover:border-black"></div>
+                <a href="#" class="btn btn-white  lg:group-hover:bg-primary lg:group-hover:text-white">MORE</a>
               </div>
-              <div class="px-2 py-3 flex justify-between border">
+            </div>
+            <!-- 編號 -->
+            <p class="paytone w-[38px] leading-none border px-2 py-6 text-2xl flex justify-center items-center lg:absolute lg:top-0 lg:left-0 lg:bg-white lg:w-16 lg:h-16">1</p>
+            <!-- 圖片區域 -->
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art04.jpg" alt="散步遇到的女人" class="pic-1 border border-r-0 border-l-0 object-cover object-top  w-[87px] lg:h-[374px] lg:w-full lg:border lg:border-b-0">
+            <div class="w-full flex flex-col items-stretch">
+            <!-- 標題區域 -->
+              <div class="py-4 px-2 border border-b-0">
+                <h3 class="text-lg leading-[1.44444] font-bold">散步遇到的女人</h3>
+              </div>
+            <!-- 作者＆價格區域 -->
+              <div class="px-2 py-4 flex justify-between border">
                 <p class="squada">Zoe Jiang</p>
-                <div class="flex">
-                  <img src="" alt="">
+                <div class="flex justify-center items-center">
+                  <i class="fa-brands fa-ethereum mr-2"></i>
                   <p class="squada">300</p>
                 </div>
               </div>
@@ -120,18 +132,132 @@ current: index
         </li>
 
         <!-- 02 -->
-        <li class="mb-4">
-          <div class="bg-white flex">
-            <p class="paytone border px-2 py-6 text-2xl flex justify-center items-center">2</p>
-            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art05.jpg" alt="爆炸頭的母親" class="border w-[87px] object-cover">
-            <div class="w-full flex flex-col items-stretch">
-              <div class="py-4 px-2 border">
-                <p class="text-lg leading-[1.44444] font-bold">爆炸頭的母親</p>
+        <li class="mb-4 lg:w-4/12 lg:px-3">
+          <div class="bg-white flex  lg:flex-col lg:relative group">
+            <!-- 按鈕 -->
+            <div class="absolute bottom-[117px] right-[1px] hidden group-hover:block ">
+              <div class="relative group ">
+                <div class="triangle lg:group-hover:border-black"></div>
+                <a href="#" class="btn btn-white  lg:group-hover:bg-primary lg:group-hover:text-white">MORE</a>
               </div>
-              <div class="px-2 py-3 flex justify-between border">
+            </div>
+            <!-- 編號 -->
+            <p class="paytone w-[38px] leading-none border px-2 py-6 text-2xl flex justify-center items-center lg:absolute lg:top-0 lg:left-0 lg:bg-white lg:w-16 lg:h-16">2</p>
+            <!-- 圖片區域 -->
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art05.jpg" alt="爆炸頭的母親" class="pic-1 border border-r-0 border-l-0 object-cover object-top  w-[87px] lg:h-[374px] lg:w-full lg:border lg:border-b-0">
+            <div class="w-full flex flex-col items-stretch">
+            <!-- 標題區域 -->
+              <div class="py-4 px-2 border border-b-0">
+                <h3 class="text-lg leading-[1.44444] font-bold">爆炸頭的母親</h3>
+              </div>
+            <!-- 作者＆價格區域 -->
+              <div class="px-2 py-4 flex justify-between border">
                 <p class="squada">Yui</p>
-                <div class="flex">
-                  <img src="" alt="">
+                <div class="flex justify-center items-center">
+                  <i class="fa-brands fa-ethereum mr-2"></i>
+                  <p class="squada">300</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <!-- 03 -->
+        <li class="mb-4 lg:w-4/12 lg:px-3">
+          <div class="bg-white flex  lg:flex-col lg:relative group">
+            <!-- 按鈕 -->
+            <div class="absolute bottom-[117px] right-[1px] hidden group-hover:block ">
+              <div class="relative group ">
+                <div class="triangle lg:group-hover:border-black"></div>
+                <a href="#" class="btn btn-white  lg:group-hover:bg-primary lg:group-hover:text-white">MORE</a>
+              </div>
+            </div>
+            <!-- 編號 -->
+            <p class="paytone w-[38px] leading-none border px-2 py-6 text-2xl flex justify-center items-center lg:absolute lg:top-0 lg:left-0 lg:bg-white lg:w-16 lg:h-16">3</p>
+            <!-- 圖片區域 -->
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art06.jpg" alt="夏天的時候" class="pic-1 border border-r-0 border-l-0 object-cover object-top  w-[87px] lg:h-[374px] lg:w-full lg:border lg:border-b-0">
+            <div class="w-full flex flex-col items-stretch">
+            <!-- 標題區域 -->
+              <div class="py-4 px-2 border border-b-0">
+                <h3 class="text-lg leading-[1.44444] font-bold">夏天的時候</h3>
+              </div>
+            <!-- 作者＆價格區域 -->
+              <div class="px-2 py-4 flex justify-between border">
+                <p class="squada">Bug Lin</p>
+                <div class="flex justify-center items-center">
+                  <i class="fa-brands fa-ethereum mr-2"></i>
+                  <p class="squada">300</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <!-- 04 -->
+        <li class="mb-4 lg:w-4/12 lg:px-3">
+          <div class="bg-white flex">
+            <!-- 編號 -->
+            <p class="paytone  w-[38px] leading-none border px-2 py-6 text-2xl flex justify-center items-center lg:px-4 lg:py-0">4</p>
+            <!-- 圖片區域 -->
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art13.jpg" alt="爆炸頭的母親" class="border border-r-0 border-l-0 w-[87px] object-cover">
+            <div class="w-full flex flex-col items-stretch">
+            <!-- 標題區域 -->
+              <div class="py-4 px-2 border border-b-0">
+                <p class="text-lg leading-[1.44444] font-bold ">追求者送我的花</p>
+              </div>
+            <!-- 作者＆價格區域 -->
+              <div class="px-2 py-4 flex justify-between border ">
+                <p class="squada">Michael</p>
+                <div class="flex justify-center items-center">
+                  <i class="fa-brands fa-ethereum mr-2"></i>
+                  <p class="squada">300</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <!-- 05 -->
+        <li class="mb-4 lg:w-4/12 lg:px-3">
+          <div class="bg-white flex">
+            <!-- 編號 -->
+            <p class="paytone  w-[38px] leading-none border px-2 py-6 text-2xl flex justify-center items-center lg:px-4 lg:py-0">5</p>
+            <!-- 圖片區域 -->
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art07.jpg" alt="今天釣到的魚" class="border border-r-0 border-l-0 w-[87px] object-cover">
+            <div class="w-full flex flex-col items-stretch">
+            <!-- 標題區域 -->
+              <div class="py-4 px-2 border border-b-0">
+                <p class="text-lg leading-[1.44444] font-bold ">今天釣到的魚</p>
+              </div>
+            <!-- 作者＆價格區域 -->
+              <div class="px-2 py-4 flex justify-between border ">
+                <p class="squada">Wei JJ</p>
+                <div class="flex justify-center items-center">
+                  <i class="fa-brands fa-ethereum mr-2"></i>
+                  <p class="squada">300</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <!-- 06 -->
+        <li class="mb-4 lg:w-4/12 lg:px-3">
+          <div class="bg-white flex">
+            <!-- 編號 -->
+            <p class="paytone  w-[38px] leading-none border px-2 py-6 text-2xl flex justify-center items-center lg:px-4 lg:py-0">6</p>
+            <!-- 圖片區域 -->
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art08.jpg" alt="人生中的貓咪們" class="border border-r-0 border-l-0 w-[87px] object-cover ">
+            <div class="w-full flex flex-col items-stretch">
+            <!-- 標題區域 -->
+              <div class="py-4 px-2 border border-b-0">
+                <p class="text-lg leading-[1.44444] font-bold ">人生中的貓咪們</p>
+              </div>
+            <!-- 作者＆價格區域 -->
+              <div class="px-2 py-4 flex justify-between border">
+                <p class="squada">Even Lai</p>
+                <div class="flex justify-center items-center">
+                  <i class="fa-brands fa-ethereum mr-2"></i>
                   <p class="squada">300</p>
                 </div>
               </div>
@@ -141,4 +267,43 @@ current: index
       </ul>
     </div>
   </section>
+  
+
+
+  <div class="container">
+    <ul class="-mx-3">
+      <li class="mb-4 px-3 lg:w-4/12">
+        <div class="bg-white flex group shrink-0 w-full">
+          <!-- 編號 start -->
+          <p class="paytone  w-[10.38251%] leading-none border px-2 py-6 text-2xl flex justify-center items-center lg:px-4 lg:py-0">4</p>
+          <!-- 編號 end -->
+
+          <!-- 圖片區域 start-->
+          <div class="relative w-[23.77049%]">
+            <div class="absolute bg-black z-10 top-0 left-0 w-full h-full opacity-0 text-white squada flex justify-center items-center group-hover:opacity-70">MORE</div>
+            <div class="triangle z-20 opacity-0 group-hover:opacity-100 w-auto h-auto"></div>
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/art13.jpg" alt="爆炸頭的母親" class="border border-l-0  w-[87px] h-[90px]">
+          </div>
+          <!-- 圖片區域 end-->
+
+          <!-- 文字區域 start -->
+          <div class=" w-[57.65027%]">
+          <!-- 標題區域 -->
+            <div class="py-4 px-2 border border-b-0">
+              <p class="text-lg leading-[1.44444] font-bold ">人生中的貓咪們</p>
+            </div>
+          <!-- 作者＆價格區域 -->
+            <div class="px-2 py-4 flex justify-between border">
+                <p class="squada">Even Lai</p>
+                <div class="flex justify-center items-center">
+                  <i class="fa-brands fa-ethereum mr-2"></i>
+                  <p class="squada">300</p>
+                </div>
+            </div>
+          </div>
+          <!-- 文字區域 end -->
+        </div>
+      </li>
+    </ul>
+  </div>
 </main>
