--- a/app/index.html
+++ b/app/index.html
@@ -333,7 +333,6 @@ current: index
     </div>
   </section>
 
-  <!-- swiper區塊暫時放棄 -->
   <section class="artist mt-10 lg:mt-20">
     <div class="container">
       <!-- 標題區塊 -->
@@ -362,7 +361,7 @@ current: index
                 Antony Wu
               </h3>
               <!-- 按鈕 -->
-              <div class="absolute z-10 bottom-6 right-2 lg:hidden display">
+              <div class="absolute z-10 bottom-6 right-2 lg:hidden display lg:bottom-10 lg:right-6">
                 <div class="relative group">
                   <div class="triangle lg:group-hover:border-black border-b-0"></div>
                   <a href="#"
@@ -374,12 +373,13 @@ current: index
                 src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/artist01.jpg"
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
-              <div class="hidden z-10 bg-white text-base p-6 text-left top-[106%] display">
+              <div
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
                 ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
             <!-- 手機版圖片下方文字 -->
-            <div class="bg-white text-base p-6 text-left top-[106%] lg:hidden">
+            <div class="bg-white text-base w-full p-6 text-left top-[106%] lg:hidden">
               ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
             </div>
           </div>
@@ -390,7 +390,7 @@ current: index
                 Antony Wu
               </h3>
               <!-- 按鈕 -->
-              <div class="absolute z-10 bottom-6 right-2 lg:hidden display">
+              <div class="absolute z-10 bottom-6 right-2 lg:hidden display lg:bottom-10 lg:right-6">
                 <div class="relative group">
                   <div class="triangle lg:group-hover:border-black border-b-0"></div>
                   <a href="#"
@@ -402,12 +402,13 @@ current: index
                 src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/artist02.jpg"
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
-              <div class="hidden z-10 bg-white text-base p-6 text-left top-[106%] display">
+              <div
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
                 ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
             <!-- 手機版圖片下方文字 -->
-            <div class="bg-white text-base p-6 text-left top-[106%] lg:hidden">
+            <div class="bg-white w-full text-base p-6 text-left top-[106%] lg:hidden">
               ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
             </div>
           </div>
@@ -418,7 +419,7 @@ current: index
                 Antony Wu
               </h3>
               <!-- 按鈕 -->
-              <div class="absolute z-10 bottom-6 right-2 lg:hidden display">
+              <div class="absolute z-10 bottom-6 right-2 lg:hidden display lg:bottom-10 lg:right-6">
                 <div class="relative group">
                   <div class="triangle lg:group-hover:border-black border-b-0"></div>
                   <a href="#"
@@ -430,13 +431,14 @@ current: index
                 src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/artist05.jpg"
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
-              <div class="hidden z-10 bg-white text-base p-6 text-left top-[106%] display">
-                ​喜愛大自然，創作題材常見大山、大水、花草與樹木。 電腦版
+              <div
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
+                ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
             <!-- 手機版圖片下方文字 -->
-            <div class="bg-white text-base p-6 text-left top-[106%] lg:hidden">
-              ​喜愛大自然，創作題材常見大山、大水、花草與樹木。手機版
+            <div class="bg-white w-full text-base p-6 text-left top-[106%] lg:hidden">
+              ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
             </div>
           </div>
           <!-- 04 -->
@@ -446,7 +448,7 @@ current: index
                 Antony Wu
               </h3>
               <!-- 按鈕 -->
-              <div class="absolute z-10 bottom-6 right-2 lg:hidden display">
+              <div class="absolute z-10 bottom-6 right-2 lg:hidden display lg:bottom-10 lg:right-6">
                 <div class="relative group">
                   <div class="triangle lg:group-hover:border-black border-b-0"></div>
                   <a href="#"
@@ -458,13 +460,14 @@ current: index
                 src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week8-202207/artist04.jpg"
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
-              <div class="hidden z-10 bg-white text-base p-6 text-left top-[106%] display">
-                ​喜愛大自然，創作題材常見大山、大水、花草與樹木。 電腦版
+              <div
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
+                ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
             <!-- 手機版圖片下方文字 -->
-            <div class="bg-white text-base p-6 text-left top-[106%] lg:hidden">
-              ​喜愛大自然，創作題材常見大山、大水、花草與樹木。手機版
+            <div class="bg-white w-full text-base p-6 text-left top-[106%] lg:hidden">
+              ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
             </div>
           </div>
         </div>
@@ -846,7 +849,7 @@ current: index
   <section class="Join Us mt-10 relative lg:mt-20 ">
     <!-- 偽元素線條 -->
     <div
-      class="before:content-[''] before:w-full before:h-[2px] before:absolute before:top-[110px] before:left-0 before:bg-black">
+      class="before:content-[''] before:w-full before:h-[4px] before:absolute before:top-[110px] before:left-0 before:bg-black">
     </div>
     <div
       class="before:content-[''] before:w-full before:h-[1px] before:absolute before:top-[121px] before:left-0 before:bg-black">
