調整swiper各解析度文字

--- a/app/index.html
+++ b/app/index.html
@@ -374,7 +374,7 @@ current: index
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
               <div
-                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display opacity-80 lg:w-[250px] xl:w-[307px]">
                 ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
@@ -403,7 +403,7 @@ current: index
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
               <div
-                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display opacity-80 lg:w-[250px] xl:w-[307px]">
                 ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
@@ -432,7 +432,7 @@ current: index
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
               <div
-                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display opacity-80 lg:w-[250px] xl:w-[307px]">
                 ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
@@ -461,7 +461,7 @@ current: index
                 alt="" class="mb-4 display lg:grayscale" />
               <!-- 電腦版圖片下方文字 -->
               <div
-                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display lg:w-[307px] opacity-80">
+                class="hidden absolute z-10 bg-white text-base p-6 text-left bottom-10 left-6 display opacity-80 lg:w-[250px] xl:w-[307px]">
                 ​喜愛大自然，創作題材常見大山、大水、花草與樹木。
               </div>
             </div>
